# linux-course-2020

03_TerminalProject/: Makefile  show.c
04_Multifile/: Makefile
05_Environmental/: CMakeLists.txt  Window.c  pcredemo.c
06_Debugging/: wrong_program.c
07_DebuggingTracing/: Makefile  wrapper.c
08_TestingCoverage/: CMakeLists.txt  tests.c
08_TestingCoverage/src/: CMakeLists.txt
08_TestingCoverage/tests/: CMakeLists.txt  tests.c
09_I18nL10n/: CMakeLists.txt  prog.c  prog.pot  ru.po
11_Toolkits/: Makefile  glibc-hash.c
